Fix button alignment

--- a/site/style.scss
+++ b/site/style.scss
@@ -148,6 +148,7 @@ a {
   }
 
   width: 100%;
+  text-align: right;
   @include tablet-plus {
     width: 40%;
   }
